v0.4:
 - Switched to a CMake/CPack-based build/packaging system, which can build
   binary tar.bz2's, deb's, and rpm's.
 - Improved Twitch's self-preservation instincts.
 - All code is now managed by the Bazaar VCS.
 - Changed digging behavior to be more like the original game.
 - Made it possible for there to be more than one level generator, and added 2
   new level generators: 'simple' and 'maze'. The original one is named 'toast'.
   Better name coming soon. :)
 - Added fullscreen capabilities.
 - Improved command-line parsing.
 - Other bugfixes.

v0.3:
 - Energy and health is now managed by game engine. Tanks can now die.
 - Bases added, which can heal and/or recharge your tank.
 - Displays now draw static when a tank is low on power.
 - All tanks now have their own colors.
 - Various code clean-ups, bug fixes, and optimizations.

v0.2:
 - Significant code cleanup.
 - Now supports 8 tanks on the same map.
 - Added the first version of the Twitch AI.
 - Shooting while digging speeds you up.
 - Controller code abstracted into a cleaner API.
 - Numerous bug fixes and optimizations.

v0.1:
 - Better graphic system, which allows for creating viewing panes anywhere in
   the window, centered on arbitrary tanks.
 - Digging in dirt now takes longer than driving out in the open.
 - Beginnings of collision detection.
 - Added ability to shoot.

v0.0.1:
 - Initial version.
 - Decent level generator.
 - Beginnings of a graphic system.
 - Tanks, but no collision detection.
